[gd_scene load_steps=5 format=2]

[ext_resource path="res://Misc/Themes/Main.tres" type="Theme" id=1]
[ext_resource path="res://Screens/Options/InputOption.tscn" type="PackedScene" id=2]
[ext_resource path="res://Screens/Options/Options.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 38.0
rect_min_size = Vector2( 100, 50 )
text = "Back"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 130.0
margin_top = 10.0
margin_right = -100.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 794.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Controls" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_left = 197.0
margin_top = 199.0
margin_right = 597.0
margin_bottom = 381.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 4
custom_constants/separation = 10

[node name="Attack1" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Controls"]
margin_right = 400.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Controls/Attack1"]
margin_left = 57.0
margin_right = 172.0
margin_bottom = 38.0
text = "Attack 1"

[node name="Attack1" parent="ScrollContainer/VBoxContainer/Controls/Attack1" instance=ExtResource( 2 )]
margin_left = 192.0
margin_right = 342.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )

[node name="Attack2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Controls"]
margin_top = 48.0
margin_right = 400.0
margin_bottom = 86.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Controls/Attack2"]
margin_left = 54.0
margin_right = 175.0
margin_bottom = 38.0
text = "Attack 2"

[node name="Attack2" parent="ScrollContainer/VBoxContainer/Controls/Attack2" instance=ExtResource( 2 )]
margin_left = 195.0
margin_right = 345.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
focus_mode = 2

[node name="Ability1" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Controls"]
margin_top = 96.0
margin_right = 400.0
margin_bottom = 134.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Controls/Ability1"]
margin_left = 53.0
margin_right = 176.0
margin_bottom = 38.0
text = "Ability 2"

[node name="Ability1" parent="ScrollContainer/VBoxContainer/Controls/Ability1" instance=ExtResource( 2 )]
margin_left = 196.0
margin_right = 346.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
focus_mode = 2

[node name="Ability2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Controls"]
margin_top = 144.0
margin_right = 400.0
margin_bottom = 182.0
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Controls/Ability2"]
margin_left = 53.0
margin_right = 176.0
margin_bottom = 38.0
text = "Ability 2"

[node name="Ability2" parent="ScrollContainer/VBoxContainer/Controls/Ability2" instance=ExtResource( 2 )]
margin_left = 196.0
margin_right = 346.0
margin_bottom = 38.0
rect_min_size = Vector2( 150, 0 )
focus_mode = 2
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="assignedInput" from="ScrollContainer/VBoxContainer/Controls/Attack1/Attack1" to="." method="_on_Attack1_assignedInput"]
[connection signal="assignedInput" from="ScrollContainer/VBoxContainer/Controls/Attack2/Attack2" to="." method="_on_Attack2_assignedInput"]
[connection signal="assignedInput" from="ScrollContainer/VBoxContainer/Controls/Ability1/Ability1" to="." method="_on_Ability1_assignedInput"]
[connection signal="assignedInput" from="ScrollContainer/VBoxContainer/Controls/Ability2/Ability2" to="." method="_on_Ability2_assignedInput"]
